# eecs583_project

./: .gitignore  README.md
examples/: add.cpp  add.cu  add2.cu  add2_cuda  add2_moreblocks-cuda-nvptx64-nvidia-cuda-sm_70.ll  add2_moreblocks.cu  add2_moreblocks.ll  add2_moreblocks_cuda  add2_morethreads.cu  add2_morethreads_cuda  add_2.cu  add_clang  add_cuda  add_moreblocks.cu  add_morethreads.cu  gprof_gcc.rpt  sample.pbs  sample_interactive.pbs  sample_interactive_nongpu.pbs  sample_interactive_nonv.pbs
g2s_pass/: CMakeLists.txt  CloneLoop.cpp  clang_comp.sh  clang_comp_ll.sh  final_compile.sh  global2shared.cpp  matrix_copy-cuda-nvptx64-nvidia-cuda-sm_70.ll  matrix_copy.cu  matrix_copy.g2s.ll  matrix_copy.ll  matrix_copy_shared-cuda-nvptx64-nvidia-cuda-sm_70.ll  matrix_copy_shared.cu  matrix_copy_shared.g2s.ll  matrix_copy_shared.ll  matrix_copy_shared_bank.cu  matrix_transpose-cuda-nvptx64-nvidia-cuda-sm_70.ll  matrix_transpose.ll  matrix_transpose_2.cu  matrix_transpose_shared-cuda-nvptx64-nvidia-cuda-sm_70.ll  matrix_transpose_shared.cu  matrix_transpose_shared.ll
static_pass/: CTMemPass.cpp  c_compile.sh  ll_edit.cpp  memco.cu  myJob_new.sh
